# staking-protocol

./: Anchor.toml  package.json
frontend/: .gitignore  README.md  config.js  package.json
frontend/src/: config.json  index.html  index.js  lib.js  style.css  utils.js
frontend/src/idl/: staking.json
lib/: utils.js
programs/staking/: Cargo.toml
programs/staking/src/: account.rs  calculate.rs  error.rs  event.rs  lib.rs  utils.rs
tests/: lib.js
tests/staking/: claiming.test.js  funding.test.js  snip.test  staking.test.js  unstaking.test.js
