[package]
name = "tokenlock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenlock"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
hex = "0.4.3"

[dev-dependencies]
solana-sdk = "=1.7.11"

