[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
crc = "^1.0.0"
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}

[dev-dependencies]
solana-sdk = "=1.7.11"
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }

